fixed margin top for body and flash is visible

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,3 +15,7 @@
  *= require font-awesome
  */
  @import 'bootstrap';
+
+body {
+  margin-top: 50px;
+}
